--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "flavorly/hybridly-shared",
+    "name": "flavorly/hybridly-share",
     "description": "A Quick way to flash & share Hybridly Variables from anywhere, persisting on session & processes.",
     "keywords": [
         "flavorly",
