--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "require": {
         "php": "^8.1",
         "laravel/framework": "^10.0",
-        "hybridly/laravel": "^v0.1.0-alpha.4",
+        "hybridly/laravel": "^v0.6.1",
         "spatie/laravel-package-tools": "^1.14.0",
         "illuminate/contracts": "^10.0"
     },
